tests/ui/parser/const-recover-semi-issue-151149.stderr
error: expected `;`, found keyword `const`
  --> $DIR/const-recover-semi-issue-151149.rs:19:3
   |
LL | &1
   |   ^ help: add `;` here
LL |
LL | const fn foo() -> &'static u8 {
   | ----- unexpected token

error: expected `;`, found `}`
  --> $DIR/const-recover-semi-issue-151149.rs:22:38
   |
LL |       const C: u8 = u8::const_default()
   |  _____-                                ^
LL | |     &C
   | |______- to finish parsing this const, expected this to be followed by a `;`
LL |   }
   |   - unexpected token
   |
note: the const was parsed as having a bit-and binary expression
  --> $DIR/const-recover-semi-issue-151149.rs:22:19
   |
LL |     const C: u8 = u8::const_default()
   |                   ------------------- parsed as the left-hand expression
LL |     &C
   |     -- parsed as the right-hand expression
   |     |
   |     this was parsed as a bit-and
help: you may have meant to write a `;` to terminate the const earlier
   |
LL |     const C: u8 = u8::const_default();
   |                                      +

error: expected `;`, found `}`
  --> $DIR/const-recover-semi-issue-151149.rs:28:9
   |
LL |      + 2
   |         ^ help: add `;` here
LL | }
   | - unexpected token

error: expected `;`, found `}`
  --> $DIR/const-recover-semi-issue-151149.rs:33:13
   |
LL |      + val()
   |             ^ help: add `;` here
LL | }
   | - unexpected token

error: aborting due to 4 previous errors

